force-app/main/default/objects/Pincode_Master__c/Pincode_Master__c.object-meta.xml
<CustomObject>
    <label>Pincode Master</label>
    <nameField>
        <displayFormat>PIN-{000000}</displayFormat>
        <label>Pincode Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pincode Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>