force-app/main/default/objects/Pincode_Master__c/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <description>Post office circle</description>
    <inlineHelpText>Post office circle</inlineHelpText>
    <label>Circle</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>