force-app/main/default/objects/Pincode_Master__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Captures the City name</description>
    <inlineHelpText>Enter the City name</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>