force-app/main/default/objects/Pincode_Master__c/fields/Delivery_Non_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Non_Delivery__c</fullName>
    <description>Whether the post office delivers mail</description>
    <inlineHelpText>Whether the post office delivers mail</inlineHelpText>
    <label>Delivery / Non Delivery</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>