force-app/main/default/objects/Pincode_Master__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Post office division</description>
    <inlineHelpText>Post office division</inlineHelpText>
    <label>Division</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>