force-app/main/default/objects/Pincode_Master__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of post office</description>
    <inlineHelpText>Location of post office</inlineHelpText>
    <label>Location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>