force-app/main/default/objects/Pincode_Master__c/fields/Office_Type__c.field-meta.xml
<CustomField>
    <fullName>Office_Type__c</fullName>
    <description>Post office type</description>
    <inlineHelpText>Post office type</inlineHelpText>
    <label>Office Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>