force-app/main/default/objects/Pincode_Master__c/fields/Post_Office__c.field-meta.xml
<CustomField>
    <fullName>Post_Office__c</fullName>
    <label>Post Office</label>
    <length>50</length>
    <type>Text</type>
</CustomField>