force-app/main/default/objects/Pincode_Master__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Post office region</description>
    <inlineHelpText>Post office region</inlineHelpText>
    <label>Region</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>