force-app/main/default/objects/Pincode_Master__c/validationRules/Allow_Numeric_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_Numeric_Only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER( Pincode__c ))</errorConditionFormula>
    <errorDisplayField>Pincode__c</errorDisplayField>
    <errorMessage>the value that is not valid in an integer.</errorMessage>
</ValidationRule>