force-app/main/default/objects/Pincode_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pincode__c</columns>
    <columns>Post_Office__c</columns>
    <columns>District__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pincode__c</field>
        <operation>equals</operation>
        <value>560014</value>
    </filters>
    <label>All</label>
</ListView>